tests/paczka1/fuzzy1/12541196.err
Error in line 11: KGE1QTo S472 38,9
Error in line 23: S2b6 S472 71,6
Error in line 22: ZNbY5IcDLI S710 87,9
Error in line 35: SKr4U8q S472 85,5
Error in line 34: ZNbY5IcDLI S944 55,4
